--- a/src/listenopolys/views/FXMLView.fxml
+++ b/src/listenopolys/views/FXMLView.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
 <GridPane id="structure" prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="listenopolys.controllers.FXMLController">
@@ -17,6 +18,12 @@
             <children>
                 <ListView fx:id="viewPlaylists" onMouseClicked="#viewPlaylistsClicked" />
                 <ListView fx:id="viewTracks" onMouseClicked="#viewTracksClicked" GridPane.rowIndex="2" />
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="3">
+               <children>
+                  <Button fx:id="buttonAddTrack" mnemonicParsing="false" onAction="#buttonAddTrackClicked" text="Add" />
+                  <Button fx:id="buttonRemoveTrack" mnemonicParsing="false" onAction="#buttonRemoveTrackClicked" text="Remove selected" />
+               </children>
+            </HBox>
             </children>
             <columnConstraints>
                 <ColumnConstraints percentWidth="100" />
